# LyrOSC

./: .gitmodules  CMakeLists.txt  Makefile  README.md  init.sh  run.sh
src/: audio.cpp  audio.h  main.cpp  osc.cpp  osc.h  transcriber.cpp  transcriber.h  tui.cpp  tui.h
